# pyproject.toml
[project]
name = "pixel-socket-extensions-for-comfyui"
description = "Pixel Socket Extensions for ComfyUI"
version = "0.1.4"
license = { file = "LICENSE" }
dependencies  = []

[project.urls]
Repository = "https://github.com/0nyx-networks/pixel-socket-extensions-for-comfyui"

[tool.comfy]
PublisherId = "m10i"
DisplayName = "m10i"
Icon = "https://raw.githubusercontent.com/0nyx-networks/pixel-socket-extensions-for-comfyui/refs/heads/main/assets/image.png"
